Finish home page

--- a/home.html
+++ b/home.html
@@ -76,20 +76,23 @@
 		<div class="images">
 			<div class="images-row">
 				<div class="images-column">
-					<img class="images-cell" src="images/main-1.jpg"></img>
-					<img class="images-cell" src="images/main-2.jpg"></img>
-					<img class="images-cell" src="images/main-5.jpg"></img>
+					<div class="images-bg">
+						<img class="images-cell" src="images/main-1.jpg"></img>
+						<a href="#"><div class="cross-link"></div></a>
+					</div>
+					<div class="images-bg"><img class="images-cell" src="images/main-2.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
+					<div class="images-bg"><img class="images-cell" src="images/main-5.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
 				</div>
 				<div class="images-column col-center">
-					<img class="images-cell" src="images/main-10.jpg"></img>
-					<img class="images-cell" src="images/main-3.jpg"></img>
-					<img class="images-cell" src="images/main-6.jpg"></img>
-					<img class="images-cell" src="images/main-7.jpg"></img>
+					<div class="images-bg"><img class="images-cell" src="images/main-10.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
+					<div class="images-bg"><img class="images-cell" src="images/main-3.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
+					<div class="images-bg"><img class="images-cell" src="images/main-6.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
+					<div class="images-bg"><img class="images-cell" src="images/main-7.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
 				</div>
 				<div class="images-column">
-					<img class="images-cell" src="images/main-4.jpg"></img>
-					<img class="images-cell" src="images/main-8.jpg"></img>
-					<img class="images-cell" src="images/main-9.jpg"></img>
+					<div class="images-bg"><img class="images-cell" src="images/main-4.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
+					<div class="images-bg"><img class="images-cell" src="images/main-8.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
+					<div class="images-bg"><img class="images-cell" src="images/main-9.jpg"></img><a href="#"><div class="cross-link"></div></a></div>
 				</div>
 			</div>
 		</div>
