Adaptive home page

--- a/home.html
+++ b/home.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 	<title>lian</title>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
@@ -27,6 +28,7 @@
 					<img class="search-icon" src="images/search.jpg">
 				</ul>
 			</div>
+			<a href="#" class="menu-btn"><span></span></a>
 		</nav>
 		<section class="block-for-slider">
 			<div id="viewport">
