Added modal menu

--- a/public/about.html
+++ b/public/about.html
@@ -20,11 +20,11 @@
 			</div>
 			<div class="nav-items">
 				<ul>
-					<li><a href="home.html"><div class="line"></div>home</a></li>
-					<li><div class="line"></div>about</li>
-					<li><div class="line"></div>portfolio</li>
-					<li><div class="line"></div>blog</li>
-					<li><div class="line"></div>contact</li>
+					<li><a href="index.html">home</a></li>
+					<li><a href="about.html">about</a></li>
+					<li><a href="portfolio.html">portfolio</a></li>
+					<li><a href="blog.html">blog</a></li>
+					<li><a href="contet.html">contet</a></li>
 					<img class="search-icon" src="images/search.jpg">
 				</ul>
 			</div>
