--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,7 +14,7 @@
 </head>
 <body>
 	<header>
-		<nav class="navigation">
+		<nav class="navigation navigation-responsive">
 			<div class="logo">
 				<a href="#"><img src="images/logo.jpg"></a>
 			</div>
@@ -28,8 +28,21 @@
 					<img class="search-icon" src="images/search.jpg">
 				</ul>
 			</div>
-			<a href="#" class="menu-btn"><span></span></a>
+			<a class="menu-btn"><span></span></a>
 		</nav>
+		<!-- Modal window navigation -->
+		<div class="nav-modal">
+			<div class="nav-modal-items">
+				<ul>
+					<li><a href="index.html" class="nav-link">home</a></li>
+					<li><a href="about.html" class="nav-link">about</a></li>
+					<li><a href="portfolio.html" class="nav-link">portfolio</a></li>
+					<li><a href="blog.html" class="nav-link">blog</a></li>
+					<li><a href="contet.html" class="nav-link">contet</a></li>
+					<img class="search-icon" src="images/search.jpg">
+				</ul>
+			</div>
+		</div>
 		<section class="block-for-slider">
 			<div id="viewport">
 				<div id="slidewrapper">
