--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 	<title>lian</title>
 	<script src="https://code.jquery.com/jquery-1.10.2.js"></script>
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 	<link rel="stylesheet" type="text/css" href="css/home.css">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:700" rel="stylesheet">
 	<link href="https://fonts.googleapis.com/css?family=Roboto:300" rel="stylesheet">
@@ -16,7 +17,7 @@
 	<header>
 		<nav class="navigation navigation-responsive">
 			<div class="logo">
-				<a href="#"><img src="images/logo.jpg"></a>
+				<a href="index.html"><img src="images/logo.jpg"></a>
 			</div>
 			<div class="nav-items">
 				<ul>
@@ -43,6 +44,7 @@
 				</ul>
 			</div>
 		</div>
+		<!-- Modal window navigation end -->
 		<section class="block-for-slider">
 			<div id="viewport">
 				<div id="slidewrapper">
