--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
 					<li><a href="about.html" class="nav-link">about</a></li>
 					<li><a href="portfolio.html" class="nav-link">portfolio</a></li>
 					<li><a href="blog.html" class="nav-link">blog</a></li>
-					<li><a href="contet.html" class="nav-link">contet</a></li>
+					<li><a href="contact.html" class="nav-link">contact</a></li>
 					<img class="search-icon" src="images/search.jpg">
 				</ul>
 			</div>
@@ -39,7 +39,7 @@
 					<li><a href="about.html" class="nav-link">about</a></li>
 					<li><a href="portfolio.html" class="nav-link">portfolio</a></li>
 					<li><a href="blog.html" class="nav-link">blog</a></li>
-					<li><a href="contet.html" class="nav-link">contet</a></li>
+					<li><a href="contact.html" class="nav-link">contact</a></li>
 					<img class="search-icon" src="images/search.jpg">
 				</ul>
 			</div>
@@ -141,6 +141,5 @@
 	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-<!-- 	<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script> -->
 </body>
 </html>
