--- a/public/portfolio.html
+++ b/public/portfolio.html
@@ -25,7 +25,7 @@
 					<li><a href="about.html" class="nav-link">about</a></li>
 					<li><a href="portfolio.html" class="nav-link">portfolio</a></li>
 					<li><a href="blog.html" class="nav-link">blog</a></li>
-					<li><a href="contet.html" class="nav-link">contet</a></li>
+					<li><a href="contact.html" class="nav-link">contact</a></li>
 					<img class="search-icon" src="images/search.jpg">
 				</ul>
 			</div>
@@ -39,7 +39,7 @@
 					<li><a href="about.html" class="nav-link">about</a></li>
 					<li><a href="portfolio.html" class="nav-link">portfolio</a></li>
 					<li><a href="blog.html" class="nav-link">blog</a></li>
-					<li><a href="contet.html" class="nav-link">contet</a></li>
+					<li><a href="contact.html" class="nav-link">contact</a></li>
 					<img class="search-icon" src="images/search.jpg">
 				</ul>
 			</div>
