Case navigation for veronica

--- a/index.html
+++ b/index.html
@@ -45,17 +45,6 @@
                     <li>PHP/Yii2</li>
                 </ul>
             </div>
-            <!--<div class="about-photo">-->
-            <!--<img src="img/me.JPG" alt="Denis Mitryakov">-->
-            <!--</div>-->
-        </div>
-        <div class="about-sub">
-            <p>Ознакомится с моими работами можно здесь, чуть ниже. Также под каждый проект есть свой репозиторий на <a
-                    href="https://github.com/denisonepiece">GitHub</a>.<br>
-                Помимо веб-разработки у меня есть личная жизнь: <a href="https://instagram.com/denis_onepiece/">Instagram</a>,
-                <a href="https://vk.com/denis_onepiece">Vkontakte</a>.<br>
-                Если тебя нет в соц.сетях можешь написать мне на почту: <a href="mailto:denisloverap@icloud.com">denisloverap@icloud.com</a>
-            </p>
         </div>
     </section>
     <section class="project">
@@ -70,19 +59,9 @@
                     БД и административной панели.</p>
             </div>
         </a>
-        <a class="project-alone" id="links-show">
+        <a href="projects/veronika/blog.html" class="project-alone" target="_blank">
             <div class="project-alone__top">
                 <img class="project-alone__img" src="app/img/veronika.jpg" alt="placeholder+image">
-                <object class="project-alone__links">
-                    <ul>
-                        <li><a href="projects/veronika/blog.html">blog.html</a></li>
-                        <li><a href="projects/veronika/popularity.html">popularity.html</a></li>
-                        <li><a href="projects/veronika/technology.html">technology.html</a></li>
-                        <li><a href="projects/veronika/author.html">author.html</a></li>
-                        <li><a href="projects/veronika/article.html">article.html</a></li>
-                        <li><a href="projects/veronika/ui-kit.html">ui-kit.html</a></li>
-                    </ul>
-                </object>
             </div>
             <div class="project-alone__sub">
                 <h3>Блог Вероники Агафоновой</h3>
@@ -90,27 +69,18 @@
                 <p>Верстка проекта с нуля. Заказ был взят с фриланс-биржы.</p>
             </div>
         </a>
-        <a class="project-alone" id="proj-2">
+        <a class="project-alone" target="_blank">
             <div class="project-alone__top">
                 <img class="project-alone__img" src="app/img/dacha.jpg" alt="placeholder+image">
-                <object class="project-alone__links">
-                    <ul>
-                        <li><a href="projects/veronika/blog.html">blog.html</a></li>
-                        <li><a href="projects/veronika/popularity.html">popularity.html</a></li>
-                        <li><a href="projects/veronika/technology.html">technology.html</a></li>
-                        <li><a href="projects/veronika/author.html">author.html</a></li>
-                        <li><a href="projects/veronika/article.html">article.html</a></li>
-                        <li><a href="projects/veronika/ui-kit.html">ui-kit.html</a></li>
-                    </ul>
-                </object>
             </div>
             <div class="project-alone__sub">
                 <h3>Дачный сезон</h3>
                 <h4>Front</h4>
-                <p>Сборка страниц из имеющихся модулей и разработка новых. К работе прикреплены ссылки страниц, которые верстал сам.</p>
+                <p>Сборка страниц из имеющихся модулей и разработка новых. К работе прикреплены ссылки страниц, которые
+                    верстал сам.</p>
             </div>
         </a>
-        <a href="https://denisonepiece.github.io/projects/tajam/index.html" class="project-alone">
+        <a href="https://denisonepiece.github.io/projects/tajam/index.html" target="_blank" class="project-alone">
             <div class="project-alone__top">
                 <img class="project-alone__img" src="app/img/tajam.jpg" alt="placeholder+image">
             </div>
@@ -118,21 +88,20 @@
                 <h3>tajam</h3>
                 <h4>Front</h4>
                 <p>Тестовое задание для приема на "работу" (команда крутых пацанов, которые сливают иногда проекты).</p>
-
             </div>
         </a>
 
-        <a href="https://denisonepiece.github.io/lian/index.html" class="project-alone">
+        <a href="https://denisonepiece.github.io/lian/index.html" target="_blank" class="project-alone">
             <div class="project-alone__top">
                 <img class="project-alone__img" src="app/img/lian.jpg" alt="placeholder+image">
             </div>
             <div class="project-alone__sub">
                 <h3>lian</h3>
                 <h4>Front</h4>
-                <p>Проект для портфолио. Практиковал верстку и немного JS, точнее библеотеку Jquery.</p>
+                <p>Находил макет в сети, верстал для портфолио.</p>
             </div>
         </a>
-        <a href="http://engineering-ra.ru" class="project-alone">
+        <a href="http://engineering-ra.ru" target="_blank" class="project-alone">
             <div class="project-alone__top">
                 <img class="project-alone__img" src="app/img/engeeniring.jpg" alt="placeholder+image">
             </div>
@@ -158,7 +127,6 @@
 
 <script src="app/js/cube.js"></script>
 <script src="app/js/scroll.js"></script>
-<script src="app/js/main.js"></script>
 
 <!-- Scripts end -->
 </body>
