--- a/projects/veronika/ui-kit.html
+++ b/projects/veronika/ui-kit.html
@@ -11,8 +11,19 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <!--Styles end-->
+    <link rel="stylesheet" href="../common.css">
+
 </head>
 <body>
+
+<!--NEXT PAGE BLOCK-->
+
+<a href="blog.html" class="next-page">
+    <img src="../next.svg">
+</a>
+
+<!--NEXT PAGE BLOCK END-->
+
 <div class="container">
     <h1>Heading 1</h1>
     <h2>Heading 2</h2>
