--- a/projects/veronika/author.html
+++ b/projects/veronika/author.html
@@ -11,8 +11,19 @@
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/main.css">
     <!--Styles end-->
+    <link rel="stylesheet" href="../common.css">
+
 </head>
 <body>
+
+<!--NEXT PAGE BLOCK-->
+
+<a href="ui-kit.html" class="next-page">
+    <img src="../next.svg">
+</a>
+
+<!--NEXT PAGE BLOCK END-->
+
 <header>
     <div class="header">
         <div class="header__main container">
