Navigation for dacnii sezon

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <p>Верстка проекта с нуля. Заказ был взят с фриланс-биржы.</p>
             </div>
         </a>
-        <a class="project-alone" target="_blank">
+        <a href="projects/dacha/404.html" class="project-alone" target="_blank">
             <div class="project-alone__top">
                 <img class="project-alone__img" src="app/img/dacha.jpg" alt="placeholder+image">
             </div>
