--- a/projects/dacha/worker.html
+++ b/projects/dacha/worker.html
@@ -11,9 +11,16 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/upgrate-part2.css">
+    <link rel="stylesheet" href="css/upgrate-part2.css">    <link rel="stylesheet" href="../common.css">
+
 </head>
-<body>
+<body><!--NEXT PAGE BLOCK-->
+
+<a href="404.html" class="next-page">
+    <img src="../next.svg">
+</a>
+
+<!--NEXT PAGE BLOCK END-->
 <svg style="display:none">
     <symbol id="icon-bars" viewbox="0 0 448 512">
         <path d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path>
