--- a/projects/dacha/login.html
+++ b/projects/dacha/login.html
@@ -11,12 +11,20 @@
     <link rel="stylesheet" href="css/style.css">
     <!-- LAST UPGRATE -->
     <link rel="stylesheet" href="css/upgrate.css">
-    <!-- LAST UPGRATE END -->
+    <!-- LAST UPGRATE END -->    <link rel="stylesheet" href="../common.css">
+
 </head>
-<link rel="stylesheet" href="css/style.css">
-<link rel="stylesheet" href="css/upgrate.css">
 
 <body>
+
+<!--NEXT PAGE BLOCK-->
+
+<a href="profile.html" class="next-page">
+    <img src="../next.svg">
+</a>
+
+<!--NEXT PAGE BLOCK END-->
+
 <svg style="display:none">
     <symbol id="icon-bars" viewbox="0 0 448 512">
         <path
