--- a/projects/dacha/personal-data.html
+++ b/projects/dacha/personal-data.html
@@ -9,10 +9,17 @@
 
     <script src="js/picturefill.min.js" async=""></script>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/upgrate.css">
+    <link rel="stylesheet" href="css/upgrate.css">    <link rel="stylesheet" href="../common.css">
+
 </head>
 
-<body>
+<body><!--NEXT PAGE BLOCK-->
+
+<a href="review-hand.html" class="next-page">
+    <img src="../next.svg">
+</a>
+
+<!--NEXT PAGE BLOCK END-->
     <svg style="display:none">
         <symbol id="icon-bars" viewbox="0 0 448 512">
             <path
