--- a/projects/dacha/profile.html
+++ b/projects/dacha/profile.html
@@ -15,11 +15,20 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.5.0/css/swiper.min.css">
     <link rel="stylesheet" href="css/upgrate.css">
+    <link rel="stylesheet" href="../common.css">
 
     <!-- LAST UPGRATE END -->
 </head>
 
 <body>
+
+<!--NEXT PAGE BLOCK-->
+
+<a href="personal-data.html" class="next-page">
+    <img src="../next.svg">
+</a>
+
+<!--NEXT PAGE BLOCK END-->
 <svg style="display:none">
     <symbol id="icon-bars" viewbox="0 0 448 512">
         <path
