--- a/projects/dacha/vacancy.html
+++ b/projects/dacha/vacancy.html
@@ -10,11 +10,18 @@
     <script src="js/picturefill.min.js" async=""></script>
     <link rel="stylesheet" href="css/style.css">
     <!-- LAST UPGRATE -->
-    <link rel="stylesheet" href="css/upgrate.css">
+    <link rel="stylesheet" href="css/upgrate.css">    <link rel="stylesheet" href="../common.css">
+
     <!-- LAST UPGRATE END -->
 </head>
 
-<body>
+<body><!--NEXT PAGE BLOCK-->
+
+<a href="worker.html" class="next-page">
+    <img src="../next.svg">
+</a>
+
+<!--NEXT PAGE BLOCK END-->
     <svg style="display:none">
         <symbol id="icon-bars" viewbox="0 0 448 512">
             <path d="M16 132h416c8.837 0 16-7.163 16-16V76c0-8.837-7.163-16-16-16H16C7.163 60 0 67.163 0 76v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16zm0 160h416c8.837 0 16-7.163 16-16v-40c0-8.837-7.163-16-16-16H16c-8.837 0-16 7.163-16 16v40c0 8.837 7.163 16 16 16z"></path>
