--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <canvas id="cube" width="305" height="305"></canvas>
         <div class="header-title">
             <h1 class="header-name">Денис Митряков -</h1>
-            <h1>Front-end developer</h1>
+            <h1>Frontend developer</h1>
             <h2>Люблю писать код и пить кофе</h2>
         </div>
         <!-- <canvas id="scroll" width="32" height="32"></canvas> -->
