--- a/index.html
+++ b/index.html
@@ -36,9 +36,7 @@
                 <ul>
                     <li>HTML/PUG(jade)</li>
                     <li>CSS/SCSS</li>
-                    <li>JS/Jquery(Поверхносто, но в процессе обучения. Знание частоиспользуемых в верстке библеотек и
-                        технологий)
-                    </li>
+                    <li>JS/Jquery</li>
                     <li>Gulp</li>
                     <li>Git</li>
                     <li>Photoshop(Достаточный уровень для верстки)</li>
