--- a/index.html
+++ b/index.html
@@ -2,155 +2,185 @@
 <html lang="ru">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="app/css/normalize.css">
-    <link rel="stylesheet" href="app/css/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
-    <link href="img/favicon.png" rel="shortcut icon" />
-    <title>Денис Митряков | Портфолио</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="app/css/normalize.css">
+	<link rel="stylesheet" href="app/css/main.css">
+	<link href="" rel="shortcut icon" />
+	<title>denisonepiece</title>
 </head>
 
 <body>
-    <!-- WRAPPER START -->
-    <div class="wrapper">
-        <header>
-            <canvas id="cube" width="305" height="305"></canvas>
-            <div class="header-title">
-                <h1 class="header-name">Денис Митряков -</h1>
-                <h1>Frontend developer</h1>
-                <h2>Люблю писать код и пить кофе</h2>
-            </div>
-            <!-- <canvas id="scroll" width="32" height="32"></canvas> -->
-        </header>
-        <section class="about">
-            <div class="row">
-                <div class="about-info">
-                    <h1>Мой путь</h1>
-                    <p>Сразу, как как начал заниматься веб-разработкой, устроился в диджитал агенство, сделав несколько
-                        проектов по части back-end'а, решил остановиться на <em>front-end'e</em> и сейчас сфокусирован
-                        только на нем. <br>
-                        Присутствовал на всех этапах развития проекта, от первой встречи с клиентом до его сдачи.<br>
-                        <br>
-                        <b>Что знаю:</b></p>
-                    <ul>
-                        <li>HTML/PUG</li>
-                        <li>CSS/SCSS</li>
-                        <li>JS/Jquery/React</li>
-                        <li>Gulp</li>
-                        <li>Git</li>
-                        <li>Photoshop/Figma/Zeplin.io</li>
-                        <li>PHP/Yii2</li>
-                    </ul>
-                </div>
-            </div>
-        </section>
-        <section class="project">
-            <a href="projects/sea-battle/index.html" class="project-alone" target="_blank">
-                <div class="project-alone__top">
-                    <img class="project-alone__img" src="app/img/sea-battle.jpg" alt="placeholder+image">
-                </div>
-                <div class="project-alone__sub">
-                    <h3>Морской бой</h3>
-                    <h4>Front</h4>
-                    <p>Первый опыт работы с ReactJS.</p>
-                </div>
-            </a>
-            <a href="" class="project-alone" target="_blank">
-                <div class="soon-overlay">
-                    <div class="project-alone__top">
-                        <img class="project-alone__img" src="app/img/altvpn.jpg" alt="placeholder+image">
-                    </div>
-                    <div class="project-alone__sub">
-                        <h3>altvpn(SOON, progress on github)</h3>
-                        <h4>Front</h4>
-                        <p>Хороший проект взятый с фриланс-биржы.</p>
-                    </div>
-                </div>
-            </a>
-            <a href="projects/veronika/blog.html" class="project-alone" target="_blank">
-                <div class="project-alone__top">
-                    <img class="project-alone__img" src="app/img/veronika.jpg" alt="placeholder+image">
-                </div>
-                <div class="project-alone__sub">
-                    <h3>Блог Вероники Агафоновой</h3>
-                    <h4>Front</h4>
-                    <p>Верстка проекта с нуля. Заказ был взят с фриланс-биржы.</p>
-                </div>
-            </a>
-            <a href="projects/dacha/404.html" class="project-alone" target="_blank">
-                <div class="project-alone__top">
-                    <img class="project-alone__img" src="app/img/dacha.jpg" alt="placeholder+image">
-                </div>
-                <div class="project-alone__sub">
-                    <h3>Дачный сезон</h3>
-                    <h4>Front</h4>
-                    <p>Сборка страниц из имеющихся модулей и разработка новых. К работе прикреплены ссылки страниц,
-                        которые
-                        верстал сам.</p>
-                </div>
-            </a>
-            <a href="https://denisonepiece.github.io/projects/tajam/index.html" target="_blank" class="project-alone">
-                <div class="project-alone__top">
-                    <img class="project-alone__img" src="app/img/tajam.jpg" alt="placeholder+image">
-                </div>
-                <div class="project-alone__sub">
-                    <h3>tajam</h3>
-                    <h4>Front</h4>
-                    <p>Тестовое задание для приема на "работу" (команда крутых пацанов, которые сливают иногда проекты).
-                    </p>
-                </div>
-            </a>
-            <a href="https://denisonepiece.github.io/lian/index.html" target="_blank" class="project-alone">
-                <div class="project-alone__top">
-                    <img class="project-alone__img" src="app/img/lian.jpg" alt="placeholder+image">
-                </div>
-                <div class="project-alone__sub">
-                    <h3>lian</h3>
-                    <h4>Front</h4>
-                    <p>Находил макет в сети, верстал для портфолио.</p>
-                </div>
-            </a>
-            <a href="http://hld.agency" target="_blank" class="project-alone">
-                <div class="project-alone__top">
-                    <img class="project-alone__img" src="app/img/hld.jpg" alt="placeholder+image">
-                </div>
-                <div class="project-alone__sub">
-                    <h3>hld.agency</h3>
-                    <h4>Back</h4>
-                    <p>Делал всю серверную часть, натягивал верстку на php-фреймворк Yii2, основной функционал, создание
-                        БД и административной панели.</p>
-                </div>
-            </a>
-            <a href="http://engineering-ra.ru" target="_blank" class="project-alone">
-                <div class="project-alone__top">
-                    <img class="project-alone__img" src="app/img/engeeniring.jpg" alt="placeholder+image">
-                </div>
-                <div class="project-alone__sub">
-                    <h3>engeeniring-ra.ru</h3>
-                    <h4>Backend</h4>
-                    <p>Работа с чужим кодом, доработка некоторго функционала, добавление страниц, исправление ошибок
-                        предыдущих
-                        разработчиков.</p>
+	<!-- WRAPPER START -->
+	<header class="header">
+		<div class="container">
+			<div class="nickname">denisonepiece.</div>
+			<div class="header__logo"><img src="app/img/logo.svg" alt="">
+				<div></div>
+			</div>
+			<nav class="navbar">
+				<ul class="navbar__list">
+					<li class="navbar__item"><a href="#">.About</a></li>
+					<li class="navbar__item"><a href="#">.Portfolio</a></li>
+					<li class="navbar__item"><a href="#">.Contact</a></li>
+				</ul>
+			</nav>
+			<!-- <div class="color-shifter"></div> -->
+		</div>
+	</header>
+	<main class="main">
+		<div class="container">
+			<section class="preview">
+				<div class="title">
+					<h1 class="title__nickname">
+						<span class="nick-left">denis</span>
+						<span class="nick-numbers"> one two three four five six </span>
+						<span class="nick-right">piece.</span>
+					</h1>
+				</div>
+				<div class="pizza">
+					<img class="one"src="app/img/pizza.svg" alt="">
+					<img class="two"src="app/img/pizza.svg" alt="">
+					<img class="three"src="app/img/pizza.svg" alt="">
+					<img class="four"src="app/img/pizza.svg" alt="">
+					<img class="five"src="app/img/pizza.svg" alt="">
+					<img class="six"src="app/img/pizza.svg" alt="">
+					<div></div>
+				</div>
+			</section>
+			<div class="header-title">
+				<h1 class="header-name">Денис Митряков -</h1>
+				<h1>Frontend developer</h1>
+				<h2>Люблю писать код и пить кофе</h2>
+			</div>
+			<section class="about">
+				<div class="row">
+					<div class="about-info">
+						<h1>Мой путь</h1>
+						<p>Сразу, как как начал заниматься веб-разработкой, устроился в диджитал агенство, сделав несколько
+							проектов по части back-end'а, решил остановиться на <em>front-end'e</em> и сейчас сфокусирован
+							только на нем. <br>
+							Присутствовал на всех этапах развития проекта, от первой встречи с клиентом до его сдачи.<br>
+							<br>
+							<b>Что знаю:</b></p>
+						<ul>
+							<li>HTML/PUG</li>
+							<li>CSS/SCSS</li>
+							<li>JS/Jquery/React</li>
+							<li>Gulp</li>
+							<li>Git</li>
+							<li>Photoshop/Figma/Zeplin.io</li>
+							<li>PHP/Yii2</li>
+						</ul>
+					</div>
+				</div>
+			</section>
+			<section class="project">
+				<a href="projects/sea-battle/index.html" class="project-alone" target="_blank">
+					<div class="project-alone__top">
+						<img class="project-alone__img" src="app/img/sea-battle.jpg" alt="placeholder+image">
+					</div>
+					<div class="project-alone__sub">
+						<h3>Морской бой</h3>
+						<h4>Front</h4>
+						<p>Первый опыт работы с ReactJS.</p>
+					</div>
+				</a>
+				<a href="" class="project-alone" target="_blank">
+					<div class="soon-overlay">
+						<div class="project-alone__top">
+							<img class="project-alone__img" src="app/img/altvpn.jpg" alt="placeholder+image">
+						</div>
+						<div class="project-alone__sub">
+							<h3>altvpn(SOON, progress on github)</h3>
+							<h4>Front</h4>
+							<p>Хороший проект взятый с фриланс-биржы.</p>
+						</div>
+					</div>
+				</a>
+				<a href="projects/veronika/blog.html" class="project-alone" target="_blank">
+					<div class="project-alone__top">
+						<img class="project-alone__img" src="app/img/veronika.jpg" alt="placeholder+image">
+					</div>
+					<div class="project-alone__sub">
+						<h3>Блог Вероники Агафоновой</h3>
+						<h4>Front</h4>
+						<p>Верстка проекта с нуля. Заказ был взят с фриланс-биржы.</p>
+					</div>
+				</a>
+				<a href="projects/dacha/404.html" class="project-alone" target="_blank">
+					<div class="project-alone__top">
+						<img class="project-alone__img" src="app/img/dacha.jpg" alt="placeholder+image">
+					</div>
+					<div class="project-alone__sub">
+						<h3>Дачный сезон</h3>
+						<h4>Front</h4>
+						<p>Сборка страниц из имеющихся модулей и разработка новых. К работе прикреплены ссылки страниц,
+							которые
+							верстал сам.</p>
+					</div>
+				</a>
+				<a href="https://denisonepiece.github.io/projects/tajam/index.html" target="_blank" class="project-alone">
+					<div class="project-alone__top">
+						<img class="project-alone__img" src="app/img/tajam.jpg" alt="placeholder+image">
+					</div>
+					<div class="project-alone__sub">
+						<h3>tajam</h3>
+						<h4>Front</h4>
+						<p>Тестовое задание для приема на "работу" (команда крутых пацанов, которые сливают иногда проекты).
+						</p>
+					</div>
+				</a>
+				<a href="https://denisonepiece.github.io/lian/index.html" target="_blank" class="project-alone">
+					<div class="project-alone__top">
+						<img class="project-alone__img" src="app/img/lian.jpg" alt="placeholder+image">
+					</div>
+					<div class="project-alone__sub">
+						<h3>lian</h3>
+						<h4>Front</h4>
+						<p>Находил макет в сети, верстал для портфолио.</p>
+					</div>
+				</a>
+				<a href="http://hld.agency" target="_blank" class="project-alone">
+					<div class="project-alone__top">
+						<img class="project-alone__img" src="app/img/hld.jpg" alt="placeholder+image">
+					</div>
+					<div class="project-alone__sub">
+						<h3>hld.agency</h3>
+						<h4>Back</h4>
+						<p>Делал всю серверную часть, натягивал верстку на php-фреймворк Yii2, основной функционал, создание
+							БД и административной панели.</p>
+					</div>
+				</a>
+				<a href="http://engineering-ra.ru" target="_blank" class="project-alone">
+					<div class="project-alone__top">
+						<img class="project-alone__img" src="app/img/engeeniring.jpg" alt="placeholder+image">
+					</div>
+					<div class="project-alone__sub">
+						<h3>engeeniring-ra.ru</h3>
+						<h4>Backend</h4>
+						<p>Работа с чужим кодом, доработка некоторго функционала, добавление страниц, исправление ошибок
+							предыдущих
+							разработчиков.</p>
 
-                </div>
-            </a>
-        </section>
-        <footer>
-            <h1>Спасибо, что уделили время.</h1>
-            <h2>Пиши на <a href="mailto:denisloverap@icloud.com">denisloverap@icloud.com</a>, звони на 8-923-665-66-75
-                :)
-            </h2>
-        </footer>
-    </div>
-    <!-- WRAPPER END -->
+					</div>
+				</a>
+			</section>
+		</div>
+	</main>
+	<footer>
+		<h1>Спасибо, что уделили время.</h1>
+		<h2>Пиши на <a href="mailto:denisloverap@icloud.com">denisloverap@icloud.com</a>, звони на 8-923-665-66-75
+			:)
+		</h2>
+	</footer>
+	<!-- WRAPPER END -->
 
-    <!-- Scripts start -->
+	<!-- Scripts start -->
 
-    <script src="app/js/cube.js"></script>
-    <script src="app/js/scroll.js"></script>
+	<script src="./app/js/main.js"></script>
 
-    <!-- Scripts end -->
+	<!-- Scripts end -->
 </body>
 
 </html>
