Add test work folder

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
             <li><a href="projects/tajam/index.html">Tajam <span>Верстка</span></a></li>
             <li><a href="projects/lian/index.html">Lian <span>Верстка</span></a></li>
             <li><a href="http://hld.agency/">HLD <span>Бэкенд</span></a></li>
+            <!--<li><a href="projects/test-work-1/index.html">Test-1 <span>Валид. формы</span></a></li>-->
           </ul>
         </div>
       </section>
